[package]
name = "skriv-tillsammans"
version = "0.0.1"
edition = "2021"

[dependencies]
eframe = { version = "0.23.0", features = ["persistence", "wayland", "wgpu"] }
dark-light = "1.0.0"
cola-crdt = { version = "0.1.1", features = ["encode", "serde"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"