[package]
name = "skriv-tillsammans"
version = "0.0.1"
edition = "2021"

[dependencies]
eframe = { version = "0.23.0", features = ["persistence", "wayland", "wgpu"] }
dark-light = "1.0.0"
cola-crdt = { version = "0.1.1", features = ["encode", "serde"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34", features = ["full"] }
async-trait = "0.1"
futures = "0.3.29"
libp2p = { version = "0.53.1", features = [ "tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic"] }
uuid = { version = "1.5.0", features = ["v4"] }